--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+            <h1 class="namn">Christian Berggren Bäckström</h1>
+    </header>
 <main>
     <aside>
-        <img src="https://static.independent.co.uk/s3fs-public/thumbnails/image/2017/06/14/09/istock-520801128.jpg" alt="gay" width="200" height="250" controls>
+        <img class="img1" src="https://static.picassomio.com/images/art/pm-33357-large.jpg" alt="gay" width="200" height="250" controls>
 
 
         <p class="contact">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad fugit fugiat deleniti vitae, tempora impedit, ex modi ipsa inventore blanditiis nam, dolore est a. Veritatis temporibus incidunt corporis. Architecto, enim! Lorem ipsum dolor, sit amet consectetur </p>
     </aside>
-    <header>
-        <h1>Christian Berggren Bäckström</h1>
-    </header>
+
     <article>
         <h3>Personal Information</h3>
         <p>I was born in Gräsmyr the year 2002 during the winter. During my whole life, I have always had to work at home and help my family with all sorts of different things. Such as helping my parents cooking at home.</p>
@@ -32,7 +33,7 @@
         <p>In the near future, I wish to be working with computers and programming. I would like to be having a stable job that I like and I will always be striving for more salary.</p>
     </article>
     <footer>
-        Christian Bäckström
+        <p>Christian Bäckström</p>
     </footer>
 
 </main>
