--- a/index.html
+++ b/index.html
@@ -13,10 +13,19 @@
     </header>
 <main>
     <aside>
-        <img class="img1" src="https://static.picassomio.com/images/art/pm-33357-large.jpg" alt="gay" width="200" height="250" controls>
-
-
-        <p class="contact">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad fugit fugiat deleniti vitae, tempora impedit, ex modi ipsa inventore blanditiis nam, dolore est a. Veritatis temporibus incidunt corporis. Architecto, enim! Lorem ipsum dolor, sit amet consectetur </p>
+        <div class="logo">
+            <img src="https://cdn1.imggmi.com/uploads/2019/10/17/f59f9af63eda0cf411df818eab5a5552-full.png" alt="logo" width="175" height="150">
+        </div>
+        <img class="img1" src="https://i.ibb.co/516qnxb/troll.png" alt="gay" width="200" height="250" controls>
+        <div  class="contact">
+        <p>Sweden</p>
+        <p>Västerbotten</p>
+        <p>Gräsmyr - 914 95</p>
+        <p>070-396 01 00</p>
+        <p>Christian.backstrom@elev.ga.ntig.se</p>
+        
+        
+    </div>
     </aside>
 
     <article>
@@ -32,10 +41,10 @@
         <h3>Career Objectives</h3>
         <p>In the near future, I wish to be working with computers and programming. I would like to be having a stable job that I like and I will always be striving for more salary.</p>
     </article>
-    <footer>
-        <p>Christian Bäckström</p>
-    </footer>
 
 </main>
+<footer>
+        <p1>Christian Bäckström</p1>
+    </footer>
 </body>
 </html>
